# qt6-qml-modern-cpp-examples

./: CMakeLists.txt  main.cpp
Amey/QtQmlPrac/: AppSettings.h  BackendService.h  CMakeLists.txt  ExpenseCircleItem.h  ExpenseItem.h  ExpenseListView.qml  Main.qml  applicatiodata.cpp  applicatiodata.h  expensemodel.h  main.cpp  resources.qrc
Kailas/: Kailas_README.md
Kailas/MusicPlayer/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Kailas/QtQmlPrac/: CMakeLists.txt  main.cpp
Kailas/signal_slot/: CMakeLists.txt  Main.qml  backend.cpp  backend.h  main.cpp
Nilesh/BasicApp/: CMakeLists.txt  Main.qml  main.cpp
Nilesh/nilesh/LambdaWithWrapper/: App.qml  LambdaWithWrapper.pro  README.md  main.cpp  wrappers.cpp  wrappers.h
